using only start page

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script src="index.js"></script>
 </head>
 <body class="start-bg">
-    <!-- <div class="play-btn-wrapper">
+    <div class="play-btn-wrapper">
         <button class="play-btn"> Play now!</button>
-    </div> -->
-    <div class="">
+    </div>
+    <!-- <div class="">
         <h1>Score: <span id="score">0</span></h1>
         <div id="board"></div>
-    </div>
+    </div> -->
 </body>
 </html>
